Revision history for Perl extension Catalyst-Plugin-File-RotateLogs

{{$NEXT}}

0.03 2014-10-11T08:08:09Z

    - added autodump option
    - fix maxage option of config

0.02 2014-10-06T06:54:32Z

    - log directory was changed

0.01 2014-09-09T07:51:37Z

    - original version
